tests/snapshots/ast/r#mod__common__assertion__p28_precedence_unary_vs_power_1.snap
---
source: tests/00_common/assertion.rs
expression: ast
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Unary:
                op: Neg
                expr:
                  Var: a
            op: Power
            right:
              Var: b
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Unary:
              op: Neg
              expr:
                Var: a
          op: Power
          right:
            Var: b
