tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::arrays::p01_parses_empty_array_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Array: []
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Array: []
