tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::arrays::p02_parses_single_element_array_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Array:
            - Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Array:
          - Number: 1
