tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::arrays::p04_parses_nested_arrays_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Array:
            - Array:
                - Number: 1
            - Array:
                - Number: 2
                - Number: 3
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Array:
          - Array:
              - Number: 1
          - Array:
              - Number: 2
              - Number: 3
