tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::assignment_expression::p03_assignment_is_right_associative_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Let:
        name: x
        kind: MutableStatic
        value:
          Assign:
            left:
              Var: y
            right:
              Number: 5
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - Let:
      name: x
      kind: MutableStatic
      value:
        Assign:
          left:
            Var: y
          right:
            Number: 5
          op: Assign
