tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::binary::p02_parenthesis_override_precedence_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Number: 4
                op: Add
                right:
                  Number: 2
            op: Mul
            right:
              Number: 3
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Number: 4
              op: Add
              right:
                Number: 2
          op: Mul
          right:
            Number: 3
