tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::binary::p03_comparison_lower_than_addition_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Binary:
                left:
                  Number: 1
                op: Add
                right:
                  Number: 2
            op: Lt
            right:
              Number: 5
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Binary:
              left:
                Number: 1
              op: Add
              right:
                Number: 2
          op: Lt
          right:
            Number: 5
