tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::binary::p04_equality_lower_than_comparison_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Number: 1
            op: Eq
            right:
              Binary:
                left:
                  Number: 2
                op: Lt
                right:
                  Number: 3
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Number: 1
          op: Eq
          right:
            Binary:
              left:
                Number: 2
              op: Lt
              right:
                Number: 3
