tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::calls::p02_parses_single_arg_call_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Call:
            callee:
              Var: f
            args:
              - Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Call:
          callee:
            Var: f
          args:
            - Number: 1
